fix: change .portfolio__list-wrapper width to prevent horizontal scroll

--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -536,7 +536,7 @@ img {
 }
 
 .portfolio__list-wrapper {
-  width: 100vw;
+  width: 100%;
   height: 654px;
   overflow-x: hidden;
   display: flex;
